feat: implement Time Travel API using EventLogStore and projectGraph (#119)
* feat: add Time Travel API

- Implemented `projectGraph` and `applyEvent` in `@canopy/core` for deterministic graph reconstruction.
- Added `getGraphAt` service in `@canopy/api` to query historical graph states by timestamp or event ID.
- Added dependency on `@canopy/core` and `@canopy/storage` to `@canopy/api`.
- Added tests for Time Travel API validating graph reconstruction from event history.

Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

* feat: add Time Travel API

- Implemented `projectGraph` and `applyEvent` in `@canopy/core` for deterministic graph reconstruction.
- Added `getGraphAt` service in `@canopy/api` to query historical graph states by timestamp or event ID.
- Added dependency on `@canopy/core`, `@canopy/storage`, and `temporal-polyfill` to `@canopy/api`.
- Added tests for Time Travel API validating graph reconstruction from event history.
- Fixed TypeScript errors related to `noUncheckedIndexedAccess` in UUID handling.

Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

* feat: add Time Travel API

- Implemented `projectGraph` and `applyEvent` in `@canopy/core` for deterministic graph reconstruction.
- Added `getGraphAt` service in `@canopy/api` to query historical graph states by timestamp or event ID.
- Added dependency on `@canopy/core`, `@canopy/storage`, and `temporal-polyfill` to `@canopy/api`.
- Added tests for Time Travel API validating graph reconstruction from event history.
- Fixed TypeScript errors related to `noUncheckedIndexedAccess` in UUID handling.
- Fixed linting errors in `time-travel.ts` and `projection.ts` adhering to functional style.

Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

* feat: add Time Travel API

- Implemented `projectGraph` and `applyEvent` in `@canopy/core` for deterministic graph reconstruction.
- Added `getGraphAt` service in `@canopy/api` to query historical graph states by time

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,7 +10,10 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@canopy/types": "workspace:*"
+    "@canopy/core": "workspace:*",
+    "@canopy/storage": "workspace:*",
+    "@canopy/types": "workspace:*",
+    "temporal-polyfill": "^0.3.0"
   },
   "devDependencies": {
     "typescript": "5.9.3",
