--- a/packages/api/tsconfig.check.json
+++ b/packages/api/tsconfig.check.json
@@ -6,7 +6,10 @@
     "baseUrl": ".",
     "rootDir": "../..",
     "paths": {
-      "@canopy/types": ["../../packages/types/src/index.ts"]
+      "@canopy/types": ["../../packages/types/src/index.ts"],
+      "@canopy/core": ["../../packages/core/src/index.ts"],
+      "@canopy/storage": ["../../packages/storage/src/index.ts"],
+      "@canopy/schema": ["../../packages/schema/src/index.ts"]
     }
   }
 }
