Migrate from Vitest to Bun Test (#127)
* feat: migrate from vitest to bun test

- Remove vitest dependencies and configurations
- Install happy-dom for UI tests
- Update test scripts to use `bun test`
- Migrate test files to use `bun:test` imports and `happy-dom` setup
- Fix type errors and unused imports in tests
- Ensure `bun-types` are available in tsconfig

Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

* fix: configure tsconfig for bun test

- Rename `tsconfig.json` to `tsconfig.build.json` in all packages for build isolation.
- Create `tsconfig.json` wrappers with source `paths` for `bun test` to resolve workspace dependencies without build artifacts.
- Update root `tsconfig.json` references to point to `tsconfig.build.json`.
- Ensure `bun test` runs against source files, while `tsc -b` runs against build configurations.
- Fix missing imports in `tsconfig` files during migration.

Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: mkobit <1447148+mkobit@users.noreply.github.com>

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,13 +1,34 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src"
-  },
-  "include": ["src/**/*"],
-  "references": [
-    { "path": "../types" },
-    { "path": "../core" },
-    { "path": "../storage" }
-  ]
+    "baseUrl": "../..",
+    "paths": {
+      "@canopy/types": [
+        "packages/types/src/index.ts"
+      ],
+      "@canopy/schema": [
+        "packages/schema/src/index.ts"
+      ],
+      "@canopy/core": [
+        "packages/core/src/index.ts"
+      ],
+      "@canopy/api": [
+        "packages/api/src/index.ts"
+      ],
+      "@canopy/query": [
+        "packages/query/src/index.ts"
+      ],
+      "@canopy/storage": [
+        "packages/storage/src/index.ts"
+      ],
+      "@canopy/sync": [
+        "packages/sync/src/index.ts"
+      ],
+      "@canopy/ui": [
+        "packages/ui/src/index.tsx"
+      ]
+    },
+    "composite": false,
+    "noEmit": true
+  }
 }
