--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
     "bd": "bd",
     "postinstall": "bd hooks install || true"
   },
+  "overrides": {
+    "@typescript-eslint/utils": "8.54.0"
+  },
   "devDependencies": {
     "@beads/bd": "^0.49.3",
+    "@eslint/js": "9",
     "@stylistic/eslint-plugin": "^5.7.0",
     "@types/node": "^25.0.7",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/uuid": "^11.0.0",
-    "@typescript-eslint/eslint-plugin": "8.54.0",
-    "@typescript-eslint/parser": "8.54.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^5.1.3",
     "bun-types": "^1.3.8",
     "electron": "^40.0.0",
-    "eslint": "10.0.0",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-import": "^2.32.0",
@@ -45,7 +49,7 @@
     "prettier": "^3.8.0",
     "tsx": "^4.21.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.54.0",
+    "typescript-eslint": "^8.54.0",
     "uuid": "^13.0.0",
     "vite": "^7.3.1"
   },
